<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_chope_node</name>
  <version>0.0.0</version>
  <description>Node that handles current state of parking spots.</description>
  <maintainer email="arjoc@intrinsic.ai">Arjo Chakravarty</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rmf_building_map_msgs</depend>
  <depend>rmf_chope_msgs</depend>
  <depend>rmf_fleet_adapter</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
