<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_fleet_adapter</name>
  <version>2.0.0</version>
  <description>Fleet Adapter package for RMF fleets.</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <maintainer email="aaron@openrobotics.org">Aaron</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rmf_utils</depend>
  <depend>rmf_door_msgs</depend>
  <depend>rmf_ingestor_msgs</depend>
  <depend>rmf_dispenser_msgs</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_lift_msgs</depend>
  <depend>rmf_task_msgs</depend>
  <depend>rmf_traffic</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>rmf_task_ros2</depend>
  <depend>rmf_battery</depend>
  <depend>rmf_task</depend>
  <depend>rmf_task_sequence</depend>
  <depend>std_msgs</depend>
  <depend>rmf_api_msgs</depend>
  <depend>rmf_building_map_msgs</depend>
  <depend condition="$RMF_ENABLE_FAILOVER == 1">stubborn_buddies</depend>
  <depend condition="$RMF_ENABLE_FAILOVER == 1">stubborn_buddies_msgs</depend>

  <depend>rmf_websocket</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>nlohmann_json_schema_validator_vendor</depend>

  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
