<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_fleet_adapter_python</name>
  <version>2.0.0</version>
  <description>Python bindings for the rmf_fleet_adapter</description>
  <maintainer email="methylDragon@gmail.com">methylDragon</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache License 2.0</license>

  <depend>pybind11_vendor</depend>
  <depend>pybind11_json_vendor</depend>
  <depend>rclpy</depend>
  <depend>rmf_fleet_adapter</depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
